auto-test/tests/chapter_18/invalid_types/extra_credit/union_type_declarations/array_of_incomplete_union_type.c
/* It's illegal to specify an array type with any incomplete
 * element type, including union types.
 */

union u;  
int main(void) {
    
    
    union u(*arr)[3];
    return 0;
}